create github pages

--- a/akg.html
+++ b/akg.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">make your own website</a></section><section class="mbr-section content5 cid-r3hyvvPBA8" id="content5-1g">
+<section class="engine"><a href="https://mobiri.se/z">best free website templates</a></section><section class="mbr-section content5 cid-r3hyvvPBA8" id="content5-1g">
 
     
 
@@ -500,7 +500,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Спасибо за заполнение анкеты!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VqlyfCrpMmtt+cHfmDhpqkZuk959Vp5NU6TIkzzE46uCAT/hRAFLjCV96wz1YiB7OTI4LBddqRBhD6PTJvg2uuTOR2P+nXt8xFJPU35id8hUOH53VSoLxN0UHH07puHY" data-form-field="Email">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HXD8wk90vcJL8DlkzckWkpEFLhcSB7tHn3YnosBHvUgNgjmIKqoEpnlE60CkP4YFWL6pw/6jSs4be//ohjTUMkg12jFwwWlgDDKYDTzvWzkgengoSwtYmTY40reggdB0" data-form-field="Email">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1r">
