--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">make your own website for free</a></section><section class="carousel slide cid-r2ON3tGZ7H" data-interval="false" id="slider1-2">
+<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="carousel slide cid-r2ON3tGZ7H" data-interval="false" id="slider1-2">
 
     
 
@@ -182,7 +182,7 @@
                         Спасибо за заполнение анкеты!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AbRyN9BPF9nRROcrO0DBTiMKoTbba/gnBCFgIesVUphp4w+U08VHzntLZ8501e5No1uYmBG/dyihoKs2eVxRYfxFGGOJNsvgNBtu1/UcCPbrXftxj5vW76mZLWqyaCkd" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2ljcxbpziWMotagnizbQz8nNUt+XZDQ2QcQpBzoO3owXYzxSdCjOrHuQcxmYHcSnAOs10ZG+WYCJQOXF+F/kglu6KKzK3avpR9Rz3ONq4yZB2iVBYDrsHrP0UGdI/www" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -237,7 +237,7 @@
                         <div class="mbr-section-btn text-center">
                             <a href="https://mobirise.com" class="btn btn-primary display-4">Подробнее</a>
                         </div>
-                        <img src="assets/images/019.jpg" alt="Mobirise">
+                        <img src="assets/images/0110.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -366,7 +366,7 @@
             </div>
             <div class="media-container-row image-row">
                 <div class="mbr-figure" style="width: 60%;">
-                    <img src="assets/images/019.jpg" alt="Mobirise">
+                    <img src="assets/images/0110.jpg" alt="Mobirise">
                 </div>
             </div>
         </div>
@@ -538,7 +538,7 @@
         <div class="media-container-row">
 
             <div class="mbr-figure" style="width: 60%;">
-                <img src="assets/images/019.jpg" alt="Mobirise">
+                <img src="assets/images/0110.jpg" alt="Mobirise">
             </div>
 
             <div class="media-content">
@@ -557,7 +557,7 @@
                         Спасибо за заполнение анкеты!
                     </div>
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="lQWXI6vXsm4AlDxVG/9+qTti25drIGifEAx7UYKR2nzyg5wSi5M+R0Bo2GoXdt2j2cIYq1Llk97JXjYMsX91X6Mjysi4DkGsXWsPc4VKCnCti00GevedIEz4XAUB6y/6" data-form-email="true">
+                        <input type="hidden" value="lOuY3SSY3mFdF7bxOqV65ifmB7xv8X/2u3LU4rD2yBZhrIUx5hUIu5Ikez4Pmr38vtI9TBrQrv4BDivZMMSsggT6Vav/2el3iKonxQhceR/02A2EOzS5pwRtQKhmNsrM" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" placeholder="Email" id="email-header14-1d">
                         </div>
